--- a/src/App.css
+++ b/src/App.css
@@ -214,7 +214,7 @@
 
 /* Home Page */
 .schedule-button {
-  width: 70%;
+  width: 30%;
   padding: 15px;
   margin-top: 70px;
   border: none;
@@ -384,4 +384,9 @@ button:hover {
 /* 右側按鈕的位置 */
 .right-button {
   right: 10px; /* 距離右邊界 10px */
+}
+
+/* 頁面底色 */
+.page-backgroundColor {
+  background-color: #f0f0f060
 }
