--- a/src/App.css
+++ b/src/App.css
@@ -198,7 +198,7 @@
 }
 
 .text-input {
-  width: 90%;
+  width: 270px;
   padding: 12px;
   margin: 10px 0;
   border-radius: 5px;
@@ -389,5 +389,5 @@ button:hover {
 
 /* 頁面底色 */
 .page-backgroundColor {
-  background-color: #f0f0f060
+  background-color: #f0f0f060;
 }
